# sound_representation

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  eval_datasets.py  main.py  pyproject.toml  run_experiments.py  setup.cfg
cfg/: __init__.py  config.yaml  default.yaml  nerf.yaml  siren.yaml
sound_repr/: dataset.py  utils.py
sound_repr/cfg/: __init__.py  base_config.py  main_config.py
sound_repr/models/: base.py  baseline.py  nerf.py  siren.py
tests/: test_config.py  test_models.py
