[metadata]
name = sound_representation
version = 1.0
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wwolny/sound_representation.git

[options]
packages = find:
python_requires = >=3.8
install_requires =
    wandb>=0.12.14,<1.0.0
    tqdm>=4.64.0,<5.0.0
    PyYAML==6.0
    torch>=1.10.0,<2.0.0
    torchvision>=0.11.1,<1.0.0
    torchaudio>=0.10.0,<1.0.0
    torchmetrics>=0.7.3,<1.0.0
    plotly>=5.8.0,<6.0.0
    matplotlib>=3.5.1,<4.0.0
    scipy>=1.8.0,<2.0.0
    librosa>=0.9.1,<1.0.0
    pre-commit>=2.2.0<3.0.0
    black>=22.10.0<23.0.0
    flake8>=6.0.0<7.0.0
    isort>=5.10.1<6.0.0
